--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "your-app-name",
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -11,5 +14,11 @@
     "react-modal": "^3.16.3",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
