--- a/expensetracker/package.json
+++ b/expensetracker/package.json
@@ -1,9 +1,12 @@
 {
   "name": "expensetracker",
-  
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.1",
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@fortawesome/react-fontawesome": "^3.0.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -11,8 +14,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.3",
-    "recharts": "^2.15.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
